--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,7 @@ img {
     text-transform: uppercase;
     font-weight: bold;
     margin-bottom: 2rem;
+    border: none;
 }
 
 @media (min-width: 768px) {
@@ -169,7 +170,9 @@ img {
         display: inline-block;
     }
 }
-
+.boton:hover {
+    cursor: pointer;
+}
 .boton--primario {
     background-color: var(--negro);
 }
@@ -250,4 +253,32 @@ background-image: url(../img/contacto.jpg);
 height: 40rem;
 background-size: cover;
 background-repeat: no-repeat;
+}
+
+
+.formulario {   
+background-color: var(--blanco);
+margin: -5rem auto 0 auto;
+width: 95%;
+padding: 5rem;
+}
+
+.campo {
+display: flex;
+margin-bottom: 2rem;
+}
+
+.campo__label { 
+flex: 0 0 9rem;
+text-align: right;
+padding-right: 2rem;
+}
+
+.campo__field { 
+flex: 1;
+border: 1px solid var(--gris);
+}
+
+.campo__field--textarea { 
+height: 20rem;
 }
